// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuDropdownItem renders correctly with name 1`] = `
<div>
  <div
    class="sc-jxOwhs kSNVQc"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 19V5H9.59625L11.5963 7H21V19H3ZM4 18H20V8H11.1943L9.19425 6H4V18Z"
        fill="#F6F6F6"
      />
    </svg>
    Test Item
  </div>
</div>
`;

exports[`MenuDropdownItem renders with custom color when provided 1`] = `
<div>
  <div
    class="sc-jxOwhs kSNVQc"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 19V5H9.59625L11.5963 7H21V19H3ZM4 18H20V8H11.1943L9.19425 6H4V18Z"
        fill="red"
      />
    </svg>
    Test Item
  </div>
</div>
`;
